# toksight

./: CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: compare_tokenizers.py  coverage_analysis.py  token_diff.py  with_tokonomics.py
scripts/: generate_assets.py
src/toksight/: __init__.py  _types.py  audit.py  benchmark.py  cli.py  compare.py  compression.py  cost.py  coverage.py  diff.py  gguf.py  loader.py  mapping.py  overlap.py  stats.py  training_coverage.py
tests/: conftest.py  test_audit.py  test_benchmark.py  test_cli.py  test_compare.py  test_compression.py  test_cost.py  test_coverage.py  test_diff.py  test_edge_cases.py  test_gguf.py  test_loader.py  test_mapping.py  test_overlap.py  test_stats.py  test_training_coverage.py  test_types.py
